@@ -73,8 +73,6 @@
     X(RFMTX1,     MANUFACTURER_BMT, 0x07,  0x05) \
     X(TSD2,       MANUFACTURER_TCH, 0xf0,  0x76) \
     X(SONTEX868,  MANUFACTURER_SON, 0x08,  0x16) \
-    X(TOPASESKR,  MANUFACTURER_AMT, 0x06,  0xf1) \
-    X(TOPASESKR,  MANUFACTURER_AMT, 0x07,  0xf1) \
 
 
 
